Hugs spaces and cleanup